installR 0.8.1
--------------

NEW FEATURE:
   * install.URL - added a "wait" parameter with default as F (it now means that R doesn't wait for the installation of the software to finish before it releases the console).  And also "..." with access to the shell command run.

BUG FIXES:
   * Fixed a bug in updateR, to make sure it will be able to open the new Rgui, and also close the old R.


installR 0.8
------------

FIXES FOR CRAN SUBMISSION:
   * Fixed some spelling mistakes in DESCRIPTION,
   * Made sure to run the checks in the latest R version (R 2.15.3, oh the irony)
   * Changed update.R to be called updateR (in order to avoid confusing it as an S3 variation to 'update')


My thanks goes to Prof Brian Ripley for his help.


installR 0.7
--------------

NEW FUNCTIONS ADDED:
   * ask.user.yn.question - Asks the user for one yes/no question.

UPDATED FUNCTIONS:
   * update.R  - fixed a bug in quit_R, and added an option to open the Rgui of the new R. Started using ask.user.yn.question in the function (to make it more readable).
   * fixed some parameters not defined in the function.
   * made install.MikTeX more friendly in case a wrong version number is specified.

OTHER NOTES:
   * More documentation.  Updated README.md (fixed \link vs \url)
   * More documentation.  Updated README.md

TODO for future releases:
   * uninstall.R() for the old version of R (including the library folder)
   * Better integration with the "global library" strategy



installR 0.6
------------

NEW FUNCTIONS ADDED:
   * get.installed.R.folders - Returns folder names with R installations
   * copy.packages.between.libraries - Copies all packages from one library folder to another

UPDATED FUNCTIONS:
   * update.R  - major update.  Now the user can copy his packages from the old R version to the new version.
   * ask.user.for.a.row - new "questions_text" parameter

OTHER NOTES:
   * Updated the NEWS
   * More documentation