@@ -3,15 +3,16 @@ export(copy.packages.between.libraries)
 export(create.global.library)
 export(file.name.from.url)
 export(get.installed.R.folders)
+export(install.git)
 export(install.GitHub)
 export(install.MikTeX)
+export(install.packages.zip)
+export(install.pandoc)
 export(install.R)
 export(install.RStudio)
 export(install.Rtools)
 export(install.URL)
-export(install.git)
-export(install.packages.zip)
-export(install.pandoc)
 export(is.windows)
+export(shutdown)
 export(source.https)
 export(updateR)
